--- a/Railway/cinnamon/cinnamon.css
+++ b/Railway/cinnamon/cinnamon.css
@@ -295,14 +295,14 @@ StScrollBar StButton#hhandle:active {
  * ! Slider
  * ====================================== */
 .slider, .popup-slider-menu-item {
-  height: 16px;
+  height: 6px;
   min-width: 15em;
   -slider-height: 6px;
   -slider-background-color: rgba(0, 0, 0, 0.2);
   -slider-active-background-color: #06b025;
   -slider-border-color: transparent;
   -slider-active-border-color: transparent;
-  -slider-border-width: 0;
+  -slider-border-width: -3px;
   -slider-handle-radius: 2px;
   -slider-radius: 0px;
   color: transparent;
