Fix more font size issues

--- a/Railway/cinnamon/scss/main/_alt-tab.scss
+++ b/Railway/cinnamon/scss/main/_alt-tab.scss
@@ -14,7 +14,7 @@
 		border-image: url("img/containers/tile-bg.svg") 10;
 		color: $text-secondary-invert;
 		padding: 1px;
-		font-size: $font-size-lg;
+		font-size: 100%;
 
 		.item-box {
 			padding: 10px;
