--- a/Railway/cinnamon/scss/third-party__extensions/_g-tile.scss
+++ b/Railway/cinnamon/scss/third-party__extensions/_g-tile.scss
@@ -7,6 +7,7 @@
 	width: 220px; // fixed
 	spacing: 0;
 	border-radius: 0;
+	font-size: $font-size-base;
 
 	> * {
 		border-image: url("img/containers/inner-bg__middle.svg") 3;
@@ -14,7 +15,7 @@
 }
 
 .grid-title {
-	font-size: $font-size-base;
+	font-size: 100%;
 	font-weight: normal;
 	color: $text-primary;
 	text-align: center;
