--- a/Railway/cinnamon/cinnamon.css
+++ b/Railway/cinnamon/cinnamon.css
@@ -1,9 +1,20 @@
-/* Menu style
- * common: like any other popup menus
- * default: a more stylized menu
+/*
+ * Railway theme for Cinnamon
+ * Copyright (C) 2018 German Franco <dev.germanfr@gmail.com>
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as published
+ * by the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-/* Main theme color */
-/* Whether to have opaque or traslucent menus */
 /* ======================================
  * ! Font
  * ====================================== */
@@ -1744,7 +1755,6 @@ or .applet-icon,
   height: 24px;
   padding: 0 3px;
   color: rgba(255, 255, 255, 0.65);
-  /* &:outlined:hover {} */
 }
 
 .workspace-button:hover {
