Remove shadow for hovered full-color icons

--- a/Railway/cinnamon/cinnamon.css
+++ b/Railway/cinnamon/cinnamon.css
@@ -1355,6 +1355,10 @@ or .applet-icon,
   border-image: url("img/panel/applet__vertical__checked.svg") 10;
 }
 
+.applet-box .applet-icon {
+  icon-shadow: 0 0 transparent;
+}
+
 /* ======================================
  * ! Calendar
  * ====================================== */
