--- a/Railway/cinnamon/scss/main/applets/_1-applet-globals.scss
+++ b/Railway/cinnamon/scss/main/applets/_1-applet-globals.scss
@@ -56,4 +56,8 @@ or/* ======================================
 			border-image: url("img/panel/applet__vertical__checked.svg") 10;
 		}
 	}
+
+	.applet-icon {
+		icon-shadow: 0 0 transparent;
+	}
 }
