--- a/Railway/cinnamon/cinnamon.css
+++ b/Railway/cinnamon/cinnamon.css
@@ -1530,8 +1530,8 @@ or .applet-icon,
 }
 
 .sound-player > StBoxLayout:first-child {
-  padding: .4em 1.3em .6em;
-  spacing: .6em;
+  padding: 2px 8px 8px;
+  spacing: 8px;
   font-weight: normal;
   font-size: 110%;
 }
@@ -1698,6 +1698,7 @@ or .applet-icon,
 .sound-player-overlay StBoxLayout {
   padding-top: .2em;
   spacing: .4em;
+  max-width: 250px;
 }
 
 .sound-player .slider, .sound-player .popup-slider-menu-item {
