Update switch assets

--- a/Railway/cinnamon/scss/main/controls/_switchers.scss
+++ b/Railway/cinnamon/scss/main/controls/_switchers.scss
@@ -4,11 +4,12 @@
 
 .toggle-switch, .toggle-switch-us, .toggle-switch-intl {
 	@include size(30px, 15px);
-	background-image: url("img/controls/switch-off.svg");
+	background-image: url("img/controls/switch.svg");
 	background-color: $border-element;
+	background-position: 0px 0px;
 
 	&:checked {
-		background-image: url("img/controls/switch-on.svg");
+		background-position: 15px 0px;
 		background-color: $accent-primary;
 	}
 }
