--- a/Railway/cinnamon/cinnamon.css
+++ b/Railway/cinnamon/cinnamon.css
@@ -147,12 +147,13 @@ StScrollBar StButton#hhandle:active {
 .toggle-switch, .toggle-switch-us, .toggle-switch-intl {
   width: 30px;
   height: 15px;
-  background-image: url("img/controls/switch-off.svg");
+  background-image: url("img/controls/switch.svg");
   background-color: rgba(0, 0, 0, 0.2);
+  background-position: 0px 0px;
 }
 
 .toggle-switch:checked, .toggle-switch-us:checked, .toggle-switch-intl:checked {
-  background-image: url("img/controls/switch-on.svg");
+  background-position: 15px 0px;
   background-color: #06b025;
 }
 
