--- a/Railway/cinnamon/cinnamon.css
+++ b/Railway/cinnamon/cinnamon.css
@@ -1465,14 +1465,16 @@ StScrollBar StButton#hhandle:active {
 .window-list-box {
   spacing: 2px;
   padding: 0;
+  /* Workaround until Cinnamon 3.6, to be replaced by padding and spacing.
+	   window-list-box paddings didn't work, now they do */
 }
 
 .window-list-box .window-list-item-box {
-  padding: 0 4px 0 0;
+  padding: 0 6px 0 0;
 }
 
 .window-list-box #appMenuIcon {
-  padding: 0 0 0 8px;
+  padding: 0 6px;
 }
 
 .window-list-box.vertical .window-list-item-box {
@@ -1480,14 +1482,13 @@ StScrollBar StButton#hhandle:active {
 }
 
 .window-list-box.vertical #appMenuIcon {
-  padding: 8px 0 0 0;
+  padding: 6px 0;
 }
 
 .window-list-item-box {
   color: white;
   border-image: url("img/panel/window-list.svg") 8;
   text-shadow: 0px 0px 4px 4px rgba(0, 0, 0, 0.2);
-  padding: 0;
   background-gradient-direction: vertical;
   background-gradient-start: transparent;
   background-gradient-end: transparent;
