--- a/Railway/cinnamon/scss/main/applets/_window-list.scss
+++ b/Railway/cinnamon/scss/main/applets/_window-list.scss
@@ -6,12 +6,14 @@
 	spacing: 2px;
 	padding: 0;
 
-	.window-list-item-box { padding: 0 4px 0 0; }
-	#appMenuIcon { padding: 0 0 0 8px; }
+	/* Workaround until Cinnamon 3.6, to be replaced by padding and spacing.
+	   window-list-box paddings didn't work, now they do */
+	.window-list-item-box { padding: 0 $applet-padding 0 0; }
+	#appMenuIcon { padding: 0 $applet-padding; }
 
 	&.vertical {
 		.window-list-item-box { padding: 0; }
-		#appMenuIcon { padding: 8px 0 0 0; }
+		#appMenuIcon { padding: $applet-padding 0; }
 	}
 }
 
@@ -19,7 +21,6 @@
 	color: $text-primary-contrast;
 	border-image: url("img/panel/window-list.svg") 8;
 	text-shadow: 0px 0px 4px 4px rgba(#000, .2);
-	padding: 0;
 
 	background-gradient-direction: vertical;
 	background-gradient-start: transparent;
