--- a/Railway/cinnamon/cinnamon.css
+++ b/Railway/cinnamon/cinnamon.css
@@ -1762,21 +1762,21 @@ StScrollBar StButton#hhandle:active {
  * ! Visual-mode Workspace Switcher applet
  * ====================================== */
 .workspace-graph {
-  padding: 0 6px;
+  padding: 0 3px;
 }
 
 .vertical .workspace-graph {
-  padding: 6px 0;
+  padding: 3px 0;
 }
 
 .workspace-graph .workspace {
-  background-color: rgba(0, 0, 0, 0.25);
-  border: 1px rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.1);
+  border: 1px rgba(255, 255, 255, 0.25);
 }
 
 .workspace-graph .workspace:active {
-  border-color: #000;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.25);
+  border-color: white;
 }
 
 .workspace-graph .workspace .windows {
