Update separators for 4.0

--- a/Railway/cinnamon/cinnamon.css
+++ b/Railway/cinnamon/cinnamon.css
@@ -379,10 +379,17 @@ StScrollBar StButton#hhandle:active {
 
 .popup-separator-menu-item {
   -gradient-height: 1px;
-  -gradient-start: rgba(0, 0, 0, 0.2);
-  -gradient-end: rgba(0, 0, 0, 0.2);
+  -gradient-start: transparent;
+  -gradient-end: transparent;
   -margin-horizontal: 0;
   height: 1px;
+  background-color: rgba(0, 0, 0, 0.2);
+  margin: .5em 1.4em;
+}
+
+.popup-menu-item > .popup-separator-menu-item {
+  /* Cinnamon < 4.0 */
+  margin: 0;
 }
 
 /* Right click in scale (show all windows) */
