--- a/Railway/cinnamon/scss/main/_popup-menus.scss
+++ b/Railway/cinnamon/scss/main/_popup-menus.scss
@@ -63,10 +63,16 @@
 
 .popup-separator-menu-item {
 	-gradient-height: 1px;
-	-gradient-start: $border-element;
-	-gradient-end: $border-element;
+	-gradient-start: transparent;
+	-gradient-end: transparent;
 	-margin-horizontal: 0;
 	height: 1px;
+	background-color: $border-element;
+	margin: .5em 1.4em;
+
+	.popup-menu-item > & { /* Cinnamon < 4.0 */
+		margin: 0;
+	}
 }
 
 .popup-slider-menu-item {
