--- a/Railway/cinnamon/scss/cinnamon.scss
+++ b/Railway/cinnamon/scss/cinnamon.scss
@@ -20,7 +20,8 @@
 @import "base/options";
 @import "base/utils";
 @import "base/colors";
-@import "base/font";
+@import "base/fonts";
+@import "base/icons";
 
 // Main
 @import "main/tooltips";
